# OCM

./: .gitignore  AGENTS.md  README.md
.github/workflows/: release.yml
backend/: .env.example  Cargo.toml
backend/migrations/: 0001_init.sql  0002_model_library.sql  0003_needs_reapply.sql  0004_provider_model_catalog_cache.sql  0005_models_dev_catalog.sql
backend/src/: autostart.rs  cache.rs  config.rs  embedded.rs  error.rs  lib.rs  main.rs  state.rs  tray.rs
backend/src/clients/: mod.rs  modelsdev.rs  openrouter.rs  provider.rs
backend/src/db/: mod.rs
backend/src/domain/: mod.rs  model.rs
backend/src/routes/: apply.rs  import.rs  mod.rs  models.rs  providers.rs  settings.rs
backend/src/services/: apply.rs  backup.rs  catalog.rs  import_config.rs  mod.rs  selection.rs  settings.rs
docs/: 字段参考表.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: client.ts  types.ts
frontend/src/components/: BatchSelectDialog.vue  ModelDetailDrawer.vue  ModelFilterBar.vue  ModelTable.vue  SelectedModelSection.vue
frontend/src/router/: index.ts
frontend/src/stores/: providers.ts
frontend/src/utils/: format.ts
frontend/src/views/: ProviderEditView.vue  ProviderListView.vue  ProviderModelManageView.vue  SettingsView.vue
scripts/: package-deb.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
