[package]
name = "ocm-backend"
version = "0.1.4"
edition = "2021"
description = "OpenCode Config Manager — backend"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
moka = { version = "0.12", features = ["future"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
dirs = "5"
chrono = { version = "0.4", features = ["clock"] }
ksni = "0.3.4"
rust-embed = "8"

[profile.dev]
# Faster incremental scaffolding builds.
opt-level = 0
