[package]
name = "ocm"
version = "0.2.2"
description = "OpenCode Config Manager"
authors = ["OCM Developer"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = { version = "2" }
tauri-plugin-shell = { version = "2" }
ocm-backend = { path = "../backend" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri-plugin-opener = "2.5.4"
